[gd_scene load_steps=8 format=2]

[ext_resource path="res://images/icon.png" type="Texture" id=1]
[ext_resource path="res://scenes/Player.gd" type="Script" id=2]
[ext_resource path="res://scenes/Apple.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Game.gd" type="Script" id=5]
[ext_resource path="res://scenes/Apples.gd" type="Script" id=6]
[ext_resource path="res://scenes/TotalScoreValue.gd" type="Script" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 30.3592, 29.6105 )

[node name="Game" type="Node2D"]
script = ExtResource( 5 )

[node name="Player" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Player"]
position = Vector2( 312, 300 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="Player"]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/Area2D"]
position = Vector2( 313.248, 299.106 )
shape = SubResource( 1 )

[node name="Apples" type="Node" parent="."]
script = ExtResource( 6 )

[node name="Apple" parent="Apples" instance=ExtResource( 3 )]
position = Vector2( 104.652, 72.1251 )

[node name="Apple2" parent="Apples" instance=ExtResource( 3 )]
position = Vector2( 282.441, 57.0448 )

[node name="Apple3" parent="Apples" instance=ExtResource( 3 )]
position = Vector2( 249.106, 57.8385 )

[node name="HUD" type="Node" parent="."]

[node name="Label" type="Label" parent="HUD"]
margin_right = 40.0
margin_bottom = 14.0
text = "Score:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TotalScoreValue" type="Label" parent="HUD"]
margin_left = 43.1336
margin_top = 0.707108
margin_right = 83.1336
margin_bottom = 14.7071
text = "0"
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="score_changed" from="." to="HUD/TotalScoreValue" method="_on_Game_score_changed"]
[connection signal="quest_score_gain" from="Apples" to="." method="_on_Apples_quest_score_gain"]
[connection signal="apple_eaten" from="Apples/Apple" to="Apples" method="_on_Apple_apple_eaten"]
[connection signal="apple_eaten" from="Apples/Apple2" to="Apples" method="_on_Apple_apple_eaten"]
[connection signal="apple_eaten" from="Apples/Apple3" to="Apples" method="_on_Apple_apple_eaten"]
